Fix crash in halftone filter

When using pixelSelection->invert() we must ensure that selection's
default bounds object is initialized properly.

BUG:407045