plugins/filters/halftone/kis_halftone_filter.cpp
@@ -121,7 +121,7 @@ void KisHalftoneFilter::processImpl(KisPaintDeviceSP device,
     painter.setCompositeOp(device->colorSpace()->compositeOp(COMPOSITE_OVER));
     KisPaintDeviceSP dab = device->createCompositionSourceDevice();
     KisPainter dbPainter(dab);
-    KisSelectionSP alpha = new KisSelection();
+    KisSelectionSP alpha = new KisSelection(new KisSelectionEmptyBounds(0));
     alpha->pixelSelection()->copyAlphaFrom(device, applyRect);
     device->fill(applyRect, backgroundC);
     dbPainter.setAntiAliasPolygonFill(config->getBool("antiAliasing", true));
